@@ -39,7 +39,10 @@ dependencies {
 
 application {
     mainClass = "nebula.MainKt"
-    applicationDefaultJvmArgs = listOf("--sun-misc-unsafe-memory-access=allow")
+    applicationDefaultJvmArgs = listOf(
+        "--sun-misc-unsafe-memory-access=allow",
+        "--enable-native-access=ALL-UNNAMED",
+    )
 }
 
 java {
